--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+
+body{
+ display: flex;
+  justify-content: center; 
+}
+#score{
+  margin-left: 30px;
+  font-size: 50px;
+  font-weight: 100;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
 .grid{
     position: absolute;
     width:1110px ;
@@ -5,14 +17,13 @@
     background-color: black;
     border: solid black 1px;
     margin-top: 80px; 
-    margin-left: 100vh;
+    margin: 100%vh;
 }
 .block{
     position: absolute;
     width: 100px;
     height: 20px;
-    background-color: rgb(255, 196, 0);
-    
+    background-color: rgb(255, 196, 0); 
 }
 .user{
     position: absolute;
@@ -21,7 +32,6 @@
     background-color: rgb(252, 10, 252) ;
 }
 .ball{
-   
     position: absolute;
     width: 20px;
     height: 20px;
