--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 
 }
+#pauseButton{
+ margin: 10px;
+
+}
+#startButton{
+margin: 10px;
+
+}
 .grid{
     position: absolute;
     width:1110px ;
@@ -29,12 +37,12 @@ body{
     position: absolute;
     width: 100px;
     height: 20px;
-    background-color: rgb(252, 10, 252) ;
+    background-color: rgb(167, 0, 167) ;
 }
 .ball{
     position: absolute;
     width: 20px;
     height: 20px;
     border-radius: 10px;
-    background-color: rgb(255, 63, 4) ;
+    background-color: rgb(255, 255, 255) ;
 }
